--- a/Alelib/src/shape_functions/shape_types/Makefile
+++ b/Alelib/src/shape_functions/shape_types/Makefile
@@ -2,7 +2,7 @@ include $(ALELIB_DIR)/conf/variables
 
 CPPSOURCES = $(wildcard *.cpp)
 
-SUBDIRS = shape_types
+SUBDIRS =
 
 .PHONY: subdirs $(SUBDIRS)
 
