--- a/Alelib/src/io/Makefile
+++ b/Alelib/src/io/Makefile
@@ -8,7 +8,7 @@ all: $(CPPSOURCES:.cpp=.o) subdirs
 subdirs:
 	#$(MAKE) all -C io
 
-%.o: %.cpp
+%.o: %.cpp $(ALELIB_DIR)/conf/variables
 #	$(warning In Objs Script)
 	$(ALE_CXX) -c $< $(ALE_CXXFLAGS) -o $@
 	
@@ -21,6 +21,5 @@ remade:
 
 -include $(CPPSOURCES:.cpp=.d)
 
-%.d: %.cpp
-	$(ALE_CXX) $< -MM -MT '$*.o $*.d ' -M $(ALE_CXXFLAGS)
+
 
